# pdf_md

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build.py  conanfile.py
.github/workflows/: ci.yml  release.yml
src/: converter.cpp  converter.h  document_model.h  image_extractor.cpp  image_extractor.h  layout_analyzer.cpp  layout_analyzer.h  layout_blocks.cpp  layout_internal.h  layout_lines.cpp  layout_math.cpp  layout_passes.cpp  layout_tables_ruled.cpp  layout_tables_text.cpp  main.cpp  markdown_writer.cpp  markdown_writer.h  pdf_extractor.cpp  pdf_extractor.h  utf8.h
tests/: CMakeLists.txt  conversion_test.cpp  corpus_test.cpp  examples_export.cpp  fixture_pdfs.cpp  fixture_pdfs.h  layout_analyzer_test.cpp  markdown_writer_test.cpp  utf8_test.cpp
tests/corpus/: download_corpus.ps1
